<resources>
    <string name="app_name">Xplore</string>
    <string name="decline">Decline</string>
    <string name="proceed">Proceed</string>
    <string name="add">Add</string>
    <string name="request_permission">Request Permission</string>
    <string name="permission_denied_description">You need to grant permissions to use this app</string>
    <string name="settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_contact_message">Do you want to add Olutoba to your contact?</string>
    <string name="approve_add_contact">You have added Olutoba to your contact list</string>
    <string name="decline_add_contact">You didn\'t add Olutoba to your contact list.</string>
    <string name="favorites">Favorites</string>
    <string name="close_app">Close App</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="dialog_one">Dialog 1</string>
    <string name="dialog_two">Dialog 2</string>
    <string name="dialog_three">Dialog 3</string>
    <string name="clicked_on_add_contact">clicked on add contact</string>
    <string name="clicked_on_settings">clicked on settings</string>
    <string name="clicked_on_favorites">clicked on favorites</string>
    <string name="clicked_on_feedback">clicked on feedback</string>
    <string name="clicked_on_close_app">clicked on close app</string>
    <string name="share_via">Share Via</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="select_options">Choose one of these options</string>
    <string name="accept_single_choice_dialog">You accepted the single choice dialog</string>
    <string name="declined_single_choice_dialog">You declined the single choice dialog</string>
    <string name="accepted_multi_choice_dialog">You accepted the multi choice dialog</string>
    <string name="decline_multi_choice_dialog">You declined the multi choice dialog</string>
    <string name="dialog_option_selected">You have selected %s</string>
    <string name="dialog_option_deselected">You have deselected %s</string>
    <string name="new_todo">New Todo</string>
</resources>