<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_contact"
        android:icon="@drawable/ic_add_contact"
        android:title="@string/add_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_feedback"
        android:title="@string/give_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_close_app"
        android:title="@string/close_app"
        app:showAsAction="never" />

</menu>